--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,12 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ~
+      - name: Setup ESP_IDF
+        run: get_idf
+      - name: Remove build files
+        run: rm -rf build
+      - name: Build files
+        run: idf.py build
+      - name: Run tests
+        run: pytest --target esp32s3
       - run: echo "🍏 This job's status is ${{ job.status }}."
