--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,8 @@ jobs:
         run: . $HOME/esp/esp-idf/export.sh
       - name: Remove build files
         run: rm -rf build
+      - name: Set Target as ESP32-S3
+        run: idf.py set-target esp32s3
       - name: Build files
         run: idf.py build
       - name: Run tests
