--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,10 +18,10 @@ jobs:
         run: rm -rf build
       - name: Set Target as ESP32-S3
         run: idf.py set-target esp32s3
-      - name: See directory for tests
-        run: ls
-      - name: Build files
-        run: idf.py build
-      - name: Run tests
-        run: pytest --target esp32s3
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Copy files to IDF_PATH
+        run: cd .. && ls
+      #- name: Build files
+        #run: idf.py build
+     # - name: Run tests
+       # run: pytest --target esp32s3
+     # - run: echo "🍏 This job's status is ${{ job.status }}."
