--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}. with name ${{ github.name }}"
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
@@ -19,7 +19,7 @@ jobs:
       - name: Set Target as ESP32-S3
         run: idf.py set-target esp32s3
       - name: Copy files to IDF_PATH
-        run: cd .. && ls
+        run: cd .. && cp ./
       #- name: Build files
         #run: idf.py build
      # - name: Run tests
