--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,11 @@ jobs:
       - name: Set Target as ESP32-S3
         run: idf.py set-target esp32s3
       - name: Copy files to IDF_PATH
-        run: cd .. && cp ./
+        run: cd .. && cp ./${{ github.event.repository.name }} $IDF_PATH/examples/
+      - name: Go to files in IDF_PATH
+        run: cd $IDF_PATH/examples/${{ github.event.repository.name }}
+      - name: See files
+        run: ls
       #- name: Build files
         #run: idf.py build
      # - name: Run tests
