--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,10 +4,10 @@ on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: $IDF_PATH/examples
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}. with name ${{ github.name }}"
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
@@ -16,16 +16,16 @@ jobs:
         run: . $HOME/esp/esp-idf/export.sh
       - name: Remove build files
         run: rm -rf build
-      - name: Copy files to IDF_PATH, remove if exits
-        run: cd .. && cp -r -f ./${{ github.event.repository.name }} $IDF_PATH/examples/
-      - name: Go to files in IDF_PATH
-        run: cd $IDF_PATH/examples/${{ github.event.repository.name }}
-      - name: See files
-        run: ls
-      - name: Set Target as ESP32-S3
-        run: idf.py set-target esp32s3
-      - name: Build files
-        run: idf.py build
+      #- name: Copy files to IDF_PATH, remove if exits
+        #run: cd .. && cp -r -f ./${{ github.event.repository.name }} $IDF_PATH/examples/
+      #- name: Go to files in IDF_PATH
+        #run: cd $IDF_PATH/examples/${{ github.event.repository.name }}
+      - name: See files and working directory
+        run: ls && pwd
+      #- name: Set Target as ESP32-S3
+        #run: idf.py set-target esp32s3
+      #- name: Build files
+        #run: idf.py build
       - name: Run tests
         run: pytest --target esp32s3
       - run: echo "🍏 This job's status is ${{ job.status }}."
