--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,9 +4,6 @@ on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted
-    defaults:
-      run:
-        working-directory: $IDF_PATH/examples
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -16,12 +13,12 @@ jobs:
         run: . $HOME/esp/esp-idf/export.sh
       - name: Remove build files
         run: rm -rf build
-      #- name: Copy files to IDF_PATH, remove if exits
-        #run: cd .. && cp -r -f ./${{ github.event.repository.name }} $IDF_PATH/examples/
-      #- name: Go to files in IDF_PATH
-        #run: cd $IDF_PATH/examples/${{ github.event.repository.name }}
-      - name: See files and working directory
-        run: ls && pwd
+      - name: Copy files to IDF_PATH, remove if exits
+        run: cd .. && cp -r -f ./${{ github.event.repository.name }} $IDF_PATH/examples/
+      - name: Go to files in IDF_PATH and see directory
+        run: |
+          cd $IDF_PATH/examples/${{ github.event.repository.name }}
+          pwd
       #- name: Set Target as ESP32-S3
         #run: idf.py set-target esp32s3
       #- name: Build files
